Edge

  - Support for rails 4.2.5 and 4.1.14
  - Slots for allowing to create multiple relationships between blocks and other
    model.
  - "locals" param for sending values from the container view to the partials
  - Fixed bug with initial_cache_key option for render_block
  - Templates and zones for container models and restrictions for block layouts
    being used in the zones.
  - Customizable folders for front and admin block partials
  - Refactoring write/read operations in serializers
  - Added ActiveResource support
  - Added Date fields support
  - Added multiple ActiveRecord/ActiveResource fields
  - Added appraisals to test support with PostgreSQL
  - Configurable database serializer: Hash and JSON.
  - Configurable database serializer: :hstore. THis includes support for
    PostgreSQL's hstore serialization.
  - Fallback behaviour on translations.

1.1.3

  - Fixed bugs on block's translations

1.1.2

  - Fixed bugs when assigning ActiveRecord fields to blocks

1.1.1

  - Layout generator: It creates the initializer and views for one layout

1.1.0

  - I18n behaviour fixed
    * Separated objects cache for translations
    * fields info both in the block and the translation

  - Block duplication enabled

  - Globalize dependency correctly specified in the gemspec

  - Latest versions of awesome-nested-set (3.0.2) and globalize (5.0.1)

1.0.0

  - First released version.
  - Customizable blocks.
  - Russian Doll Cache
  - Global cache enabled
  - Support for Rails 4.0, 4.1 and 4.2
