@@ -54,6 +54,8 @@ NoCms::Blocks.configure do |config|
   #     template: 'title-long_text', # This is the template of this block,
   #                                  # used as a partial both in the front
   #                                  # and the admin (if you use the nocms-admin gem)
+  #     template_layout: 'title-long_text' # This is the partial used as layout
+  #                              # the template is rendered inside this template_layout
   #     fields: { # This is the list of fields a block with this layout would have
   #       title: :string,
   #       long_text: :text,
@@ -90,6 +92,7 @@ NoCms::Blocks.configure do |config|
   #   },
   #   'title-3_columns_text' => {
   #     template: 'title-3_columns_text',
+  #     template_layout: 'title-block',
   #     fields: {
   #       title: :string,
   #       column_1: :text,
